--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   <input type="hidden" name="_template" value="table">
 <input type="hidden" name="_subject" value="New submission!">
 
-<input type="hidden" name="_next" value="https://trendifysmm-thankspage-app.vercel.app/">
+<input type="hidden" name="_next" value="https://trendifysmm-thankspage-app.vercel.app">
 <input type="hidden" name="_cc" value="another@email.com">
 <input type="hidden" name="_autoresponse" value="your custom message">
                   </div>
