--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
          </div>
             <div class="form-outer">
-<form method="POST" action="https://formsubmit.co/trendifysmm@gmail.com" enctype="multipart/form-data">
+<form method="POST" action="https://formsubmit.co/69fefaa8534c5205d0307ff8414bff79" enctype="multipart/form-data">
            <div class="page slide-page">
                   <div class="title">
                      Phone Number Name:
